--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -47,5 +47,61 @@
   }
 </script>
 
+</body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>TikTok Downloader</title>
+</head>
+<body >
+  <h1>TikTok Video Downloader in hf</h1>
+  <input type="text" id="videoUrl" placeholder="Enter TikTok video URL" size="50"/>
+  <button onclick="downloadVideo()">Download</button>
+  <p id="status"></p>
+
+  <script>
+  async function downloadVideo() {
+    const url = document.getElementById("videoUrl").value;
+    const status = document.getElementById("status");
+    status.textContent = "Processing...";
+
+    try {
+      // Automatically use the same origin (domain or IP)
+      const apiUrl = window.location.origin + "/api/download";
+
+      const response = await fetch(apiUrl, {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({
+          url: url,
+          withWatermark: false
+        })
+      });
+
+      const result = await response.json();
+
+      if (result.success) {
+        const videoUrl = result.data.url;
+        const a = document.createElement("a");
+        a.href = videoUrl;
+        a.download = "";
+        a.click();
+        status.textContent = "Download started.";
+      } else {
+        status.textContent = `Error: ${result.message}`;
+      }
+    } catch (err) {
+      console.error(err);
+      status.textContent = "Failed to fetch the video.";
+    }
+  }
+  </script>
 </body>
 </html>
